lots of updates with GitHub Copilot (ChatGPT) - 2

--- a/detector_scaling_calibration/genindex.html
+++ b/detector_scaling_calibration/genindex.html
@@ -79,19 +79,19 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker.__init__">__init__() (FlatMaker method)</a>
 </li>
-      <li><a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._calculate_weights">_calculate_weights() (FlatMaker method)</a>
+      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._calculate_weights">_calculate_weights() (FlatMaker method)</a>, <a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._calculate_weights">[1]</a>
 </li>
-      <li><a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._check_delta_nu">_check_delta_nu() (FlatMaker method)</a>
+      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._check_delta_nu">_check_delta_nu() (FlatMaker method)</a>, <a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._check_delta_nu">[1]</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._get_detid_scaid_qefilename_dict">_get_detid_scaid_qefilename_dict() (FlatMaker method)</a>
+      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._get_detid_scaid_qefilename_dict">_get_detid_scaid_qefilename_dict() (FlatMaker method)</a>, <a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._get_detid_scaid_qefilename_dict">[1]</a>
 </li>
-      <li><a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._get_mask">_get_mask() (FlatMaker method)</a>
+      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._get_mask">_get_mask() (FlatMaker method)</a>, <a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._get_mask">[1]</a>
 </li>
-      <li><a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._get_wavelength_range">_get_wavelength_range() (FlatMaker method)</a>
+      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._get_wavelength_range">_get_wavelength_range() (FlatMaker method)</a>, <a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._get_wavelength_range">[1]</a>
 </li>
-      <li><a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._load_wavelengths">_load_wavelengths() (FlatMaker method)</a>
+      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._load_wavelengths">_load_wavelengths() (FlatMaker method)</a>, <a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._load_wavelengths">[1]</a>
 </li>
   </ul></td>
 </tr></table>
