lost of updates

--- a/detector_scaling_calibration/genindex.html
+++ b/detector_scaling_calibration/genindex.html
@@ -65,8 +65,7 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#_"><strong>_</strong></a>
- | <a href="#D"><strong>D</strong></a>
+ <a href="#D"><strong>D</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
@@ -74,28 +73,6 @@
  | <a href="#W"><strong>W</strong></a>
  
 </div>
-<h2 id="_">_</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker.__init__">__init__() (FlatMaker method)</a>
-</li>
-      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._calculate_weights">_calculate_weights() (FlatMaker method)</a>, <a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._calculate_weights">[1]</a>
-</li>
-      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._check_delta_nu">_check_delta_nu() (FlatMaker method)</a>, <a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._check_delta_nu">[1]</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._get_detid_scaid_qefilename_dict">_get_detid_scaid_qefilename_dict() (FlatMaker method)</a>, <a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._get_detid_scaid_qefilename_dict">[1]</a>
-</li>
-      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._get_mask">_get_mask() (FlatMaker method)</a>, <a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._get_mask">[1]</a>
-</li>
-      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._get_wavelength_range">_get_wavelength_range() (FlatMaker method)</a>, <a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._get_wavelength_range">[1]</a>
-</li>
-      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._load_wavelengths">_load_wavelengths() (FlatMaker method)</a>, <a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._load_wavelengths">[1]</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -107,7 +84,7 @@
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker">FlatMaker (class in SIR_DetectorScalingCalibration.FlatMaker)</a>, <a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker">[1]</a>
+      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker">FlatMaker (class in SIR_DetectorScalingCalibration.FlatMaker)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -115,7 +92,7 @@
 <h2 id="L">L</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker.load_grism_transmission_curves">load_grism_transmission_curves() (FlatMaker method)</a>, <a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker.load_grism_transmission_curves">[1]</a>
+      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker.load_grism_transmission_curves">load_grism_transmission_curves() (FlatMaker method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -171,7 +148,7 @@
 <h2 id="W">W</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker.write_fits">write_fits() (FlatMaker method)</a>, <a href="index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker.write_fits">[1]</a>
+      <li><a href="SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker.write_fits">write_fits() (FlatMaker method)</a>
 </li>
   </ul></td>
 </tr></table>
