--- a/detector_scaling_calibration/_modules/SIR_DetectorScalingCalibration/FlatMaker.html
+++ b/detector_scaling_calibration/_modules/SIR_DetectorScalingCalibration/FlatMaker.html
@@ -95,13 +95,11 @@
 
 
 <div class="viewcode-block" id="FlatMaker">
-<a class="viewcode-back" href="../../index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker">[docs]</a>
+<a class="viewcode-back" href="../../SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker">[docs]</a>
 <span class="k">class</span><span class="w"> </span><span class="nc">FlatMaker</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot; Creates weighted 2D QE maps, per detetor, from 3D </span>
 <span class="sd">    (wavelength dependent) input QE maps &quot;&quot;&quot;</span>
 
-<div class="viewcode-block" id="FlatMaker.__init__">
-<a class="viewcode-back" href="../../index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker.__init__">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">data_dir</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
                  <span class="n">grism_parameters</span><span class="p">:</span> <span class="nb">dict</span><span class="p">,</span>
                  <span class="n">qe_files_list</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">],</span>
@@ -115,9 +113,10 @@
 <span class="sd">        data_dir : str</span>
 <span class="sd">            Directory containing the QE FITS files.</span>
 <span class="sd">        grism_parameters : dict</span>
-<span class="sd">            Per-grism configuration with required keys &#39;alpha&#39; and &#39;hdu_extn&#39;, e.g.:</span>
-<span class="sd">            { &#39;RGS&#39;: {&#39;alpha&#39;: -0.9, &#39;hdu_extn&#39;: &#39;RGS000_ORDER_1&#39;},</span>
-<span class="sd">              &#39;BGS&#39;: {&#39;alpha&#39;: -0.75, &#39;hdu_extn&#39;: &#39;BGS000_ORDER_1&#39;} }</span>
+<span class="sd">            Per-grism configuration with required keys &#39;alpha&#39; and &#39;hdu_extn&#39;, e.g.::</span>
+
+<span class="sd">                {&#39;RGS&#39;: {&#39;alpha&#39;: -0.9, &#39;hdu_extn&#39;: &#39;RGS000_ORDER_1&#39;},</span>
+<span class="sd">                 &#39;BGS&#39;: {&#39;alpha&#39;: -0.75, &#39;hdu_extn&#39;: &#39;BGS000_ORDER_1&#39;}}</span>
 <span class="sd">        qe_files_list : list[str]</span>
 <span class="sd">            Filenames of QE FITS cubes located under `data_dir`.</span>
 <span class="sd">            The first entry is used to load the wavelength grid.</span>
@@ -144,12 +143,9 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">_load_wavelengths</span><span class="p">(</span><span class="n">qe_file_path</span><span class="p">)</span>
 
         <span class="bp">self</span><span class="o">.</span><span class="n">_qe_hi</span> <span class="o">=</span> <span class="n">qe_range</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span> 
-        <span class="bp">self</span><span class="o">.</span><span class="n">_qe_lo</span> <span class="o">=</span> <span class="n">qe_range</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span></div>
+        <span class="bp">self</span><span class="o">.</span><span class="n">_qe_lo</span> <span class="o">=</span> <span class="n">qe_range</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span>
 
 
-
-<div class="viewcode-block" id="FlatMaker._load_wavelengths">
-<a class="viewcode-back" href="../../index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._load_wavelengths">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">_load_wavelengths</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">qe_file_path</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Load the wavelength grid from a QE FITS cube.</span>
@@ -172,12 +168,9 @@
         <span class="k">with</span> <span class="n">fits</span><span class="o">.</span><span class="n">open</span><span class="p">(</span><span class="n">qe_file_path</span><span class="p">)</span> <span class="k">as</span> <span class="n">hdu</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">_wave</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">zeros</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">hdu</span><span class="p">),</span> <span class="n">dtype</span><span class="o">=</span><span class="nb">float</span><span class="p">)</span>                 
             <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="nb">len</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_wave</span><span class="p">)):</span>
-                <span class="bp">self</span><span class="o">.</span><span class="n">_wave</span><span class="p">[</span><span class="n">i</span><span class="p">]</span> <span class="o">=</span> <span class="n">hdu</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">.</span><span class="n">header</span><span class="p">[</span><span class="s1">&#39;WAVELEN&#39;</span><span class="p">]</span></div>
-
+                <span class="bp">self</span><span class="o">.</span><span class="n">_wave</span><span class="p">[</span><span class="n">i</span><span class="p">]</span> <span class="o">=</span> <span class="n">hdu</span><span class="p">[</span><span class="n">i</span><span class="p">]</span><span class="o">.</span><span class="n">header</span><span class="p">[</span><span class="s1">&#39;WAVELEN&#39;</span><span class="p">]</span>
 
     
-<div class="viewcode-block" id="FlatMaker._get_wavelength_range">
-<a class="viewcode-back" href="../../index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._get_wavelength_range">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">_get_wavelength_range</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">wavelengths</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">,</span> 
                               <span class="n">transmissions</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">Tuple</span><span class="p">[</span><span class="nb">int</span><span class="p">,</span> <span class="nb">int</span><span class="p">]:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
@@ -212,12 +205,11 @@
 
         <span class="n">index_end</span> <span class="o">=</span> <span class="nb">min</span><span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">where</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">_wave</span> <span class="o">&gt;=</span> <span class="n">wavelength_high</span><span class="p">)[</span><span class="mi">0</span><span class="p">])</span>
 
-        <span class="k">return</span> <span class="n">index_start</span><span class="p">,</span> <span class="n">index_end</span></div>
-
+        <span class="k">return</span> <span class="n">index_start</span><span class="p">,</span> <span class="n">index_end</span>
 
 
 <div class="viewcode-block" id="FlatMaker.load_grism_transmission_curves">
-<a class="viewcode-back" href="../../index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker.load_grism_transmission_curves">[docs]</a>
+<a class="viewcode-back" href="../../SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker.load_grism_transmission_curves">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">load_grism_transmission_curves</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">grism_file_path</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Interpolate NISP grism transmission curves and compute per-grism weights.</span>
@@ -267,8 +259,6 @@
 
 
 
-<div class="viewcode-block" id="FlatMaker._calculate_weights">
-<a class="viewcode-back" href="../../index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._calculate_weights">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">_calculate_weights</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">wavelengths</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">,</span> 
                            <span class="n">transmissions</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">,</span> 
                            <span class="n">alpha</span><span class="p">:</span> <span class="nb">float</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">:</span>
@@ -292,9 +282,8 @@
 <span class="sd">        Notes</span>
 <span class="sd">        -----</span>
 
-<span class="sd">        - Uses `alpha` to model median zodiacal spectrum intensity: I_nu ~ lambda^alpha.</span>
-<span class="sd">        - Delta nu varies with wavelength; approximately 2.4 at 12,500, decreasing to </span>
-<span class="sd">        ~1.12 toward the red end.</span>
+<span class="sd">        - Uses :math:`I_\nu \sim \lambda^\alpha` to model median zodiacal spectrum intensity.</span>
+<span class="sd">        - Delta nu varies with wavelength; approximately 2.4 at 12,500 nm, decreasing to ~1.12 toward the red end.</span>
 
 <span class="sd">        &quot;&quot;&quot;</span>
 
@@ -307,12 +296,9 @@
 
         <span class="n">weights</span> <span class="o">=</span> <span class="n">zody_photons</span> <span class="o">/</span> <span class="n">np</span><span class="o">.</span><span class="n">sum</span><span class="p">(</span><span class="n">zody_photons</span><span class="p">)</span>
 
-        <span class="k">return</span> <span class="n">weights</span></div>
+        <span class="k">return</span> <span class="n">weights</span>
 
 
-
-<div class="viewcode-block" id="FlatMaker._check_delta_nu">
-<a class="viewcode-back" href="../../index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._check_delta_nu">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">_check_delta_nu</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">wavelengths</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">            Compute Δν across the wavelength grid via Nyquist sampling.</span>
@@ -368,12 +354,9 @@
         <span class="n">delta_nu_interp</span> <span class="o">=</span> <span class="n">f</span><span class="p">(</span><span class="n">wavelengths</span><span class="p">)</span>
         <span class="n">delta_nu_interp</span> <span class="o">=</span> <span class="mf">1.e-11</span> <span class="o">*</span> <span class="n">delta_nu_interp</span>
 
-        <span class="k">return</span> <span class="n">delta_nu_interp</span></div>
+        <span class="k">return</span> <span class="n">delta_nu_interp</span>
 
 
-
-<div class="viewcode-block" id="FlatMaker._get_detid_scaid_qefilename_dict">
-<a class="viewcode-back" href="../../index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._get_detid_scaid_qefilename_dict">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">_get_detid_scaid_qefilename_dict</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">data_dir</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">dict</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Create a mapping from detector ID to SCA ID and QE filename.</span>
 
@@ -400,12 +383,9 @@
                 <span class="n">scaid_qefilename_list</span> <span class="o">=</span> <span class="p">[</span><span class="n">sca_id</span><span class="p">,</span> <span class="n">qe_filename</span><span class="p">]</span>
                 <span class="n">detid_scaid_qefilename_dict</span><span class="p">[</span><span class="n">det_id</span><span class="p">]</span> <span class="o">=</span> <span class="n">scaid_qefilename_list</span>
 
-        <span class="k">return</span> <span class="n">detid_scaid_qefilename_dict</span> </div>
+        <span class="k">return</span> <span class="n">detid_scaid_qefilename_dict</span> 
 
 
-
-<div class="viewcode-block" id="FlatMaker._get_mask">
-<a class="viewcode-back" href="../../index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker._get_mask">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">_get_mask</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">grism</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">qe_filepath</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="p">:</span>
 <span class="w">        </span><span class="sd">&quot;&quot;&quot;Create a boolean mask of valid pixels across all wavelengths.</span>
 
@@ -452,12 +432,11 @@
 
             <span class="n">mask</span> <span class="o">=</span> <span class="n">mask</span> <span class="o">&amp;</span> <span class="n">current_mask</span>
 
-        <span class="k">return</span> <span class="n">mask</span></div>
-
+        <span class="k">return</span> <span class="n">mask</span>
 
 
 <div class="viewcode-block" id="FlatMaker.write_fits">
-<a class="viewcode-back" href="../../index.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker.write_fits">[docs]</a>
+<a class="viewcode-back" href="../../SIR_DetectorScalingCalibration.html#SIR_DetectorScalingCalibration.FlatMaker.FlatMaker.write_fits">[docs]</a>
     <span class="k">def</span><span class="w"> </span><span class="nf">write_fits</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">data_dir</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> 
                    <span class="n">output_fits_filepath</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span>
                    <span class="n">text_history</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="nb">str</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span> 
